--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,43 +7,105 @@ module(
 # TODO: This should be read from repositories.bzl, but we can't until this issue is solved:
 # - https://github.com/bazelbuild/bazel/issues/17880
 PROTOBUF_VERSION = "21.7"
+
 # The java packages are published to maven under a different versioning scheme.
 PROTOBUF_JAVA_VERSION = "3.{}".format(PROTOBUF_VERSION)
 
-bazel_dep(name = "apple_rules_lint", version = "0.3.2")
-bazel_dep(name = "bazel_skylib", version = "1.4.2")
-bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.2")
-bazel_dep(name = "gazelle", version = "0.31.1", repo_name = "bazel_gazelle")
-bazel_dep(name = "protobuf", version = PROTOBUF_VERSION, repo_name = "com_google_protobuf")
-bazel_dep(name = "rules_cc", version = "0.0.6")
-bazel_dep(name = "rules_go", version = "0.40.1", repo_name = "io_bazel_rules_go")
-bazel_dep(name = "rules_java", version = "6.1.1")
-bazel_dep(name = "rules_jvm_external", version = "5.3")
-bazel_dep(name = "rules_proto", version = "5.3.0-{}".format(PROTOBUF_VERSION))
-bazel_dep(name = "stardoc", version = "0.5.6", repo_name = "io_bazel_stardoc")
+bazel_dep(
+    name = "apple_rules_lint",
+    version = "0.3.2",
+)
+
+bazel_dep(
+    name = "bazel_skylib",
+    version = "1.4.2",
+)
+
+bazel_dep(
+    name = "bazel_skylib_gazelle_plugin",
+    version = "1.4.2",
+)
+
+bazel_dep(
+    name = "gazelle",
+    version = "0.31.1",
+    repo_name = "bazel_gazelle",
+)
+
+bazel_dep(
+    name = "protobuf",
+    version = PROTOBUF_VERSION,
+    repo_name = "com_google_protobuf",
+)
+
+bazel_dep(
+    name = "rules_cc",
+    version = "0.0.6",
+)
+
+bazel_dep(
+    name = "rules_go",
+    version = "0.40.1",
+    repo_name = "io_bazel_rules_go",
+)
+
+bazel_dep(
+    name = "rules_java",
+    version = "6.1.1",
+)
+
+bazel_dep(
+    name = "rules_jvm_external",
+    version = "5.3",
+)
+
+git_override(
+    module_name = "rules_jvm_external",
+    commit = "9a4aa70bed415dc7b0ab7db7f642fef801dce5cc",
+    remote = "https://github.com/bazelbuild/rules_jvm_external",
+)
+
+bazel_dep(
+    name = "rules_proto",
+    version = "5.3.0-{}".format(PROTOBUF_VERSION),
+)
+
+bazel_dep(
+    name = "stardoc",
+    version = "0.5.6",
+    repo_name = "io_bazel_stardoc",
+)
 
 non_module_deps = use_extension("//java/private:non-module-deps.bzl", "non_module_deps")
+
 use_repo(
     non_module_deps,
     "io_grpc_grpc_java",
 )
 
 linter = use_extension("@apple_rules_lint//lint:extensions.bzl", "linter")
+
 linter.register(name = "java-checkstyle")
+
 linter.configure(
     name = "java-checkstyle",
     config = "//java:checkstyle-default-config",
 )
+
 linter.register(name = "java-pmd")
+
 linter.configure(
     name = "java-pmd",
     config = "//java:pmd-config",
 )
+
 linter.register(name = "java-spotbugs")
+
 linter.configure(
     name = "java-spotbugs",
     config = "//java:spotbugs-default-config",
 )
+
 use_repo(
     linter,
     "apple_linters",
@@ -147,6 +209,7 @@ maven.artifact(
     group = "com.github.spotbugs",
     version = "4.7.0",
 )
+
 use_repo(
     maven,
     "com_google_api_grpc_proto_google_common_protos",
@@ -164,6 +227,7 @@ dev_maven = use_extension(
     "maven",
     dev_dependency = True,
 )
+
 dev_maven.install(
     name = "contrib_rules_jvm_tests",
     artifacts = [
@@ -180,13 +244,16 @@ dev_maven.install(
     fail_if_repin_required = True,
     fetch_sources = True,
 )
+
 use_repo(
     dev_maven,
     "contrib_rules_jvm_tests",
 )
 
 go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
+
 go_deps.from_file(go_mod = "//:go.mod")
+
 use_repo(
     go_deps,
     "com_github_aristanetworks_goarista",
